--- a/package.json
+++ b/package.json
@@ -9,8 +9,16 @@
     "test:watch": "npm run test -- --watch",
     "start": "node -r dotenv/config server.js",
     "start:watch": "nodemon -r dotenv/config server.js",
-    "setup-db": "node -r dotenv/config setup-db.js",
-    "setup-heroku": "heroku run npm run setup-db"
+    "create-tables": "node data/create-tables.js",
+    "drop-tables": "node data/drop-tables.js",
+    "load-seed-data": "node data/load-seed-data.js",
+    "recreate-tables": "npm run drop-tables && npm run create-tables",
+    "setup-db": "npm run recreate-tables && npm run load-seed-data",
+    "setup-db:prod": "heroku run npm run setup-db",
+    "setup-heroku": "npm run create-heroku-db && npm run create-heroku-db -- --as DEV_DATABASE && heroku config:set PGSSLMODE=require && npm run get-dev-db-url",
+    "create-heroku-db": "heroku addons:create heroku-postgresql:hobby-dev",
+    "get-dev-db-url": "heroku config:get DEV_DATABASE_URL",
+    "get-prod-db-url": "heroku config:get DATABASE_URL"
   },
   "jest": {
     "testEnvironment": "node"
@@ -31,6 +39,7 @@
   },
   "dependencies": {
     "chromium": "^3.0.2",
+    "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
