--- a/package.json
+++ b/package.json
@@ -38,12 +38,15 @@
     "supertest": "^6.1.3"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "chromium": "^3.0.2",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.6.0",
     "puppeteer": "^10.1.0"
-  }
+  },
+  "proxy": "http://localhost:7890"
 }
