--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "get-prod-db-url": "heroku config:get DATABASE_URL"
   },
   "jest": {
-    "testEnvironment": "node"
+    "testEnvironment": "node",
+    "testTimeout": 70000
   },
   "keywords": [],
   "author": "",
@@ -40,6 +41,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "chromium": "^3.0.2",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dotenv": "^10.0.0",
