--- a/package.json
+++ b/package.json
@@ -44,7 +44,9 @@
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
+    "discord.js": "^12.5.3",
     "dotenv": "^10.0.0",
+    "env": "^0.0.2",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.6.0",
